--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,15 @@ services:
       }'
     stdin_open: true
     tty: true
+    
+  app-frontend:
+    depends_on:
+      - app-backend
+    image: mouradhassini/school-front-image:1.0.0
+    #build : ./
+    restart: on-failure
+    ports:
+      - "8585:85"
 
 volumes:
   db :
